Use jwarc (https://github.com/iipc/jwarc) to read WARC files